# buscachat

./: .gitignore  AGENTS.md  Bot_salva_vidas.md  README.md  bot BuscaChat.txt
buscachat-python/: .env.sample  README.md  TELEMETRY.md  alembic.ini  docker-compose.yml  pyproject.toml
buscachat-python/alembic/: env.py
buscachat-python/alembic/versions/: 001_initial.py  002_bot_reports.py  003_face_embedding_vector.py  004_webhook_event_logs.py  005_meta_webhook_messages.py  006_drop_sync_tables.py  007_drop_webhook_event_logs.py
buscachat-python/app/: config.py  database.py  main.py  models.py  scheduler.py  security.py
buscachat-python/app/adapters/: __init__.py  base.py  green_api.py  sos_venezuela.py  venezuela_te_busca.py
buscachat-python/app/face/: __init__.py  base.py  insightface_matcher.py  stub.py
buscachat-python/app/messaging/: __init__.py  conversation.py  conversation_handlers.py  dependencies.py  notifier.py  pipeline.py  session_store.py  types.py  web_chat_store.py
buscachat-python/app/routers/: bot.py  green_webhook.py  meta_webhook.py  web_chat.py  webhook.py  whatsapp_base.py  whatsapp_evolution_api_webhook.py  whatsapp_green_api_webhook.py  whatsapp_meta_webhook.py  whatsapp_webhook.py
buscachat-python/app/services/: __init__.py  bot_intake.py  embedding_sync.py  missing_people_sync.py  ocr_service.py  search.py
buscachat-python/app/utils/: images.py
buscachat-python/deploy/: buscachat-python.service  production.env.sample
buscachat-python/scripts/: generate_embeddings.py  prod-deploy-server.sh  prod-smoke.sh
buscachat-python/tests/: test_bot_intake_e2e.py  test_conversation_contract.py  test_evolution_api_adapter.py  test_face.py  test_message_pipeline.py  test_missing_people_sync.py  test_missing_people_sync_e2e.py  test_ocr_e2e.py  test_ocr_service.py  test_search.py  test_sos_venezuela_adapter.py  test_venezuela_te_busca_adapter.py  test_web_chat.py  test_webhook_event_logs_e2e.py  test_whatsapp_meta_webhook.py  test_whatsapp_webhook.py
(+8 files in other folders)
