[project]
name = "buscachat-python"
version = "0.1.0"
description = "FastAPI service that syncs missing people reports into Postgres"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.1",
    "fastapi[standard]>=0.138.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.39",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "testcontainers[postgres]>=4.13.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "e2e: tests that start real infrastructure with testcontainers",
]
addopts = "-m 'not e2e'"
