[project]
name = "buscachat-python"
version = "0.1.0"
description = "FastAPI service that syncs missing people reports into Postgres"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.1",
    "fastapi[standard]>=0.138.1",
    "httpx>=0.28.1",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "redis>=5.2.0",
    "sqlmodel>=0.0.39",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
    "testcontainers[postgres]>=4.13.3",
]
# Optional native stack for local facial recognition (FACE_MATCHER=insightface).
# Tests and the default import path use the dependency-free stub matcher, so this
# group is only needed to run real face embeddings: `uv sync --group face`.
face = [
    "insightface>=0.7.3",
    "onnxruntime>=1.18.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "e2e: tests that start real infrastructure with testcontainers",
]
addopts = "-m 'not e2e'"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
